styled beat the pro text

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                     <ul class="package-features">
                         <li class="package-addition"><div class="package-1-addition">Basis</div></li>
                         <li class="package-addition"><div class="package-2-addition">Uitgebreid</div></li>
-                        <li>Inclusief een <span class="beat-the-pro">Beat The Pro</span></li>
+                        <li>Inclusief een <div class="beat-the-pro">Beat The Pro</div></li>
+                        <!-- <i class="fas fa-question-circle"></i> -->
                     </ul>
                     <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a><br>
                     <span class="package-extra-info"> dagdeel is 4 uur </span>
