Completed package card styling
- styled the button inside the card
- repositioned few elements inside the card
- changed span to div for extra info text
- adjusted positions of some elements

--- a/index.html
+++ b/index.html
@@ -122,41 +122,54 @@
 
             <div class="clinics-packages">
                 <div class="package-card package-1">
+                    <div class="prices">
+                        <div class="package-price"><span class="euro-symbol">&euro;</span>85 </div><sub>per uur</sub>
+                    </div>
                     <h3>BASIS</h3>
-                    <div class="prices"><div class="package-price">&euro;85 </div><sub>/ uur</sub></div>
                     <ul class="package-features">
                         <li>Techniektraining</li>
                         <li>Balcontrole</li>
                         <li>Passen</li>
                         <li>Schieten</li>
                     </ul>
-                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a><br>
-                    <span class="package-extra-info">+ &euro;65 extra uur </span>
+                    <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a><br>
+                    <div class="package-extra-info"><i>+ &euro;65 voor extra uur</i></div>
                 </div>
 
                 <div class="package-card package-2">
+                    <div class="prices">
+                        <div class="package-price"><span class="euro-symbol">&euro;</span>180 </div><sub>per 2 uur</sub>
+                    </div>
                     <h3>UITGEBREID</h3>
-                    <div class="prices"><div class="package-price">&euro;180 </div><sub>/ 2 uur</sub></div>
                     <ul class="package-features">
-                        <li class="package-addition"><div class="package-1-addition">Basis</div></li>
+                        <li class="package-addition">
+                            <div class="package-1-addition">Basis</div>
+                        </li>
                         <li>Strategie</li>
                         <li>Verdediging</li>
                     </ul>
-                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a><br>
-                    <span class="package-extra-info"> Minimaal 2 uur </span>
+                    <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a><br>
+                    <div class="package-extra-info"> <i>Minimaal 2 uur</i> </div>
                 </div>
-                
+
                 <div class="package-card package-3">
+                    <div class="prices">
+                        <div class="package-price"><span class="euro-symbol">&euro;</span>500 </div><sub>dagdeel</sub>
+                    </div>
                     <h3>TOERNOOI</h3>
-                    <div class="prices"><div class="package-price">&euro;500 </div><sub>/ dagdeel</sub></div>
                     <ul class="package-features">
-                        <li class="package-addition"><div class="package-1-addition">Basis</div></li>
-                        <li class="package-addition"><div class="package-2-addition">Uitgebreid</div></li>
-                        <li>Inclusief een <div class="beat-the-pro">Beat The Pro</div></li>
+                        <li class="package-addition">
+                            <div class="package-1-addition">Basis</div>
+                        </li>
+                        <li class="package-addition">
+                            <div class="package-2-addition">Uitgebreid</div>
+                        </li>
+                        <li>Inclusief een <div class="beat-the-pro">Beat The Pro</div>
+                        </li>
                         <!-- <i class="fas fa-question-circle"></i> -->
                     </ul>
-                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a><br>
-                    <span class="package-extra-info"> dagdeel is 4 uur </span>
+                    <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a><br>
+                    <div class="package-extra-info"> <i>dagdeel is 4 uur</i> </div>
                 </div>
             </div>
         </section>
