updated html for verhuur section and added affiliated brand images

--- a/index.html
+++ b/index.html
@@ -176,8 +176,12 @@
         <section id="verhuur">
             <h2 class="section-heading">VERHUUR</h2>
             <article>
-                <h3 class="article-heading">Wilt u een professionele tafelvoetbal huren?</h3>
-                <p class="article-text">Heeft u interesse in de toernooitafel?</p>
+                <h3 class="article-heading">Een professionele en offici&eumlle wedstrijdtafel huren?</h3>
+                <p class="article-text">Dit is mogelijk via het bedrijf Tafelvoetbal Nederland. Huur hier uw professionele tafelvoetbaltafel voor de scherpste tarieven van Nederland</p>
+                <figure><img src="images/tnl-brands/tornado-logo.png" alt="tornado tafelvoetbaltafel merk logo"></figure>
+                <figure><img src="images/tnl-brands/ullrichsport-logo.png" alt="ullrichsport tafelvoetbaltafel merk logo"></figure>
+                <figure><img src="images/tnl-brands/leonhart-logo.png" alt="leonhart tafelvoetbaltafel merk logo"></figure>
+                <a href="https://www.tafelvoetbal-nederland.nl/" target="_blank">Tafelvoetbal Nederland</a>
             </article>
         </section>
         <section id="evenementen">
