--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
             <ul>
-                <li><a href="#wiezijnwij">Wie zijn wij?</a></li>
+                <li><a href="#overmij">Over Mij</a></li>
                 <li><a href="#palmares">Palmares</a></li>
                 <li><a href="#clinics">Clinics</a></li>
                 <li><a href="#verhuur">Verhuur</a></li>
@@ -59,21 +59,23 @@
                 alles wat u nodig heeft voor uw event!</p>
         </article>
         <div class="learn-more-container">
-            <a class="learn-more-button" href="#wiezijnwij">Lees Meer</a>
+            <a class="learn-more-button" href="#overmij">Lees Meer</a>
         </div>
     </section>
 
     <main>
-        <section id="wiezijnwij">
-            <h2 class="section-heading">WIE ZIJN WIJ?</h2>
+        <section id="overmij">
+            <h2 class="section-heading">Over Mij</h2>
             <article>
-                <h3 class="article-heading">Wij zijn twee liefhebbers van de sport tafelvoetbal.</h3>
-                <p class="article-text">Inmiddels hebben we geparticipeerd bij vele toernooien zowel in als buiten
-                    Nederland. Dit zijn toernooien met officiële regels, rankings en spelers. Naast het spelen van grote
-                    toernooien willen wij graag meer halen uit onze passie. Al meer dan 10 jaar organiseren wij middels
-                    andere wegen toernooien, bedrijfsfeesten en andere gerelateerde events. Met al deze ervaring en
-                    kennis zijn wij goed op de hoogte over de zaken die er nodig zijn om u een zeer geslaagde dag te
-                    laten beleven. Wij hopen op zeer korte termijn deze passie met u te kunnen beleven. Tot snel!</p>
+                <h3 class="article-heading">Hoi!, Ik ben Qaiser.</h3>
+                <figure><img src="images/Qaiser-overmij.jpeg" alt="Qaiser Nova"></figure>
+                <p class="article-text">Welkom! Jarenlang heb ik met passie het spel, en tegenwoordig sport, tafelvoetbal gespeeld. Ik ben begonnen op een oude Garlando met glasplaat op de Middelbare school. Al snel vond ik de weg naar de cafés waar ik de Deutscher Meister ontdekte, naar iedereens beleving in mijn omgeving, ‘ de ‘ tafel!</p>
+                <p class="article-text">Jarenlang ( 15 jaar ) heb ik toernooien gespeeld en georganiseerd. Uiteindelijk was de uitdaging voor mij weg, en verloor ik mijn passie tijdelijk. </p>
+                <p class="article-text">Deze heb ik herontdekt begin 2014. Een paar kennissen van vroeger vroegen mij om weer een keer te knallen en ik vond het wel leuk na vier tafelvoetballoze jaren. Toevallig was er op locatie een Duitser aanwezig die mij vroeg een keer mee te gaan naar een toernooi in Duitsland. Ik ging akkoord en dacht waarom niet? </p>
+                <p class="article-text">Daar aangekomen wist ik niet wat ik zag, een toernooi met meer dan 100 teams en 20 identieke zeer kwalitatieve tafels. Na een mooie 16de plek voor de eerste keer, wilde ik deze type tafels en toernooien ook in Nederland realiseren. Zo gezegd zo gedaan. </p>
+                <p class="article-text">Ik heb er inmiddels over de 40 georganiseerde toernooien opzitten waar ik spelers uit heel Europa heb mogen ontvangen, inclusief wereldkampioenen. Ik mag mij ook officieel Nederlands kampioen noemen, en ik kom uit op het aller hoogste niveau in de Duitse Bundesliga. </p>
+                <p class="article-text">Ook heb ik met het Nederlands team een derde plek behaald op het tafelvoetbal WK. </p>
+                <p class="article-text">Met al mijn passie, ervaring en skills wilde ik al heel lang iets gaan doen. Dat moment is nu aangebroken. Ik zou graag mijn skills willen overbrengen aan andere enthousiastelingen om de sport te promoten en om van jullie betere spelers te maken. Het is voor mij een droom die uitkomt om van mijn passie werk te maken. Ik hoop jullie dus allemaal snel te mogen ontmoeten voor een superleuke en leerzame tafelvoetbalclinic.</p>
             </article>
         </section>
         <section id="palmares">
