embedded youtube video of qaiser and adjusted size of iframe

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <p class="article-text">Ik heb er inmiddels over de 40 georganiseerde toernooien opzitten waar ik spelers uit heel Europa heb mogen ontvangen, inclusief wereldkampioenen. Ik mag mij ook officieel Nederlands kampioen noemen, en ik kom uit op het aller hoogste niveau in de Duitse Bundesliga. </p>
                 <p class="article-text">Ook heb ik met het Nederlands team een derde plek behaald op het tafelvoetbal WK. </p>
                 <p class="article-text">Met al mijn passie, ervaring en skills wilde ik al heel lang iets gaan doen. Dat moment is nu aangebroken. Ik zou graag mijn skills willen overbrengen aan andere enthousiastelingen om de sport te promoten en om van jullie betere spelers te maken. Het is voor mij een droom die uitkomt om van mijn passie werk te maken. Ik hoop jullie dus allemaal snel te mogen ontmoeten voor een superleuke en leerzame tafelvoetbalclinic.</p>
+                <iframe width="100%" height="auto" src="https://www.youtube-nocookie.com/embed/mmrfm1tVgMU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
         </section>
         <section id="palmares">
