removed extra reference images

--- a/index.html
+++ b/index.html
@@ -206,16 +206,9 @@
         </section>
         <section id="referenties">
             <h2 class="section-heading">REFERENTIES</h2>
-            <figure class="ref-img"><img src="/images/references/ref-img-1.png" alt="shell logo"></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-2.png" alt=""></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt=""></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-4.png" alt=""></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-5.png" alt=""></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-6.png" alt=""></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-7.jpg" alt=""></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-8.png" alt=""></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-9.jpg" alt=""></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-10.png" alt=""></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-1.png" alt="spijkenisse snooker pool darts centrum logo"></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-2.jpg" alt="cafe frappant logo"></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt="tfc kickerheadz rotterdam logo"></figure>
         </section>
         <section id="contact">
             <h2 class="section-heading">CONTACT</h2>
