--- a/index.html
+++ b/index.html
@@ -69,14 +69,32 @@
             <article>
                 <h3 class="article-heading">Hoi!, Ik ben Qaiser.</h3>
                 <figure><img src="images/Qaiser-overmij.jpeg" alt="Qaiser Nova"></figure>
-                <p class="article-text">Welkom! Jarenlang heb ik met passie het spel, en tegenwoordig sport, tafelvoetbal gespeeld. Ik ben begonnen op een oude Garlando met glasplaat op de Middelbare school. Al snel vond ik de weg naar de cafés waar ik de Deutscher Meister ontdekte, naar iedereens beleving in mijn omgeving, ‘ de ‘ tafel!</p>
-                <p class="article-text">Jarenlang ( 15 jaar ) heb ik toernooien gespeeld en georganiseerd. Uiteindelijk was de uitdaging voor mij weg, en verloor ik mijn passie tijdelijk. </p>
-                <p class="article-text">Deze heb ik herontdekt begin 2014. Een paar kennissen van vroeger vroegen mij om weer een keer te knallen en ik vond het wel leuk na vier tafelvoetballoze jaren. Toevallig was er op locatie een Duitser aanwezig die mij vroeg een keer mee te gaan naar een toernooi in Duitsland. Ik ging akkoord en dacht waarom niet? </p>
-                <p class="article-text">Daar aangekomen wist ik niet wat ik zag, een toernooi met meer dan 100 teams en 20 identieke zeer kwalitatieve tafels. Na een mooie 16de plek voor de eerste keer, wilde ik deze type tafels en toernooien ook in Nederland realiseren. Zo gezegd zo gedaan. </p>
-                <p class="article-text">Ik heb er inmiddels over de 40 georganiseerde toernooien opzitten waar ik spelers uit heel Europa heb mogen ontvangen, inclusief wereldkampioenen. Ik mag mij ook officieel Nederlands kampioen noemen, en ik kom uit op het aller hoogste niveau in de Duitse Bundesliga. </p>
-                <p class="article-text">Ook heb ik met het Nederlands team een derde plek behaald op het tafelvoetbal WK. </p>
-                <p class="article-text">Met al mijn passie, ervaring en skills wilde ik al heel lang iets gaan doen. Dat moment is nu aangebroken. Ik zou graag mijn skills willen overbrengen aan andere enthousiastelingen om de sport te promoten en om van jullie betere spelers te maken. Het is voor mij een droom die uitkomt om van mijn passie werk te maken. Ik hoop jullie dus allemaal snel te mogen ontmoeten voor een superleuke en leerzame tafelvoetbalclinic.</p>
-                <iframe width="100%" height="auto" src="https://www.youtube-nocookie.com/embed/mmrfm1tVgMU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p class="article-text">Welkom! Jarenlang heb ik met passie het spel, en tegenwoordig sport,
+                    tafelvoetbal gespeeld. Ik ben begonnen op een oude Garlando met glasplaat op de Middelbare school.
+                    Al snel vond ik de weg naar de cafés waar ik de Deutscher Meister ontdekte, naar iedereens beleving
+                    in mijn omgeving, ‘ de ‘ tafel!</p>
+                <p class="article-text">Jarenlang ( 15 jaar ) heb ik toernooien gespeeld en georganiseerd. Uiteindelijk
+                    was de uitdaging voor mij weg, en verloor ik mijn passie tijdelijk. </p>
+                <p class="article-text">Deze heb ik herontdekt begin 2014. Een paar kennissen van vroeger vroegen mij om
+                    weer een keer te knallen en ik vond het wel leuk na vier tafelvoetballoze jaren. Toevallig was er op
+                    locatie een Duitser aanwezig die mij vroeg een keer mee te gaan naar een toernooi in Duitsland. Ik
+                    ging akkoord en dacht waarom niet? </p>
+                <p class="article-text">Daar aangekomen wist ik niet wat ik zag, een toernooi met meer dan 100 teams en
+                    20 identieke zeer kwalitatieve tafels. Na een mooie 16de plek voor de eerste keer, wilde ik deze
+                    type tafels en toernooien ook in Nederland realiseren. Zo gezegd zo gedaan. </p>
+                <p class="article-text">Ik heb er inmiddels over de 40 georganiseerde toernooien opzitten waar ik
+                    spelers uit heel Europa heb mogen ontvangen, inclusief wereldkampioenen. Ik mag mij ook officieel
+                    Nederlands kampioen noemen, en ik kom uit op het aller hoogste niveau in de Duitse Bundesliga. </p>
+                <p class="article-text">Ook heb ik met het Nederlands team een derde plek behaald op het tafelvoetbal
+                    WK. </p>
+                <p class="article-text">Met al mijn passie, ervaring en skills wilde ik al heel lang iets gaan doen. Dat
+                    moment is nu aangebroken. Ik zou graag mijn skills willen overbrengen aan andere enthousiastelingen
+                    om de sport te promoten en om van jullie betere spelers te maken. Het is voor mij een droom die
+                    uitkomt om van mijn passie werk te maken. Ik hoop jullie dus allemaal snel te mogen ontmoeten voor
+                    een superleuke en leerzame tafelvoetbalclinic.</p>
+                <iframe width="100%" height="auto" src="https://www.youtube-nocookie.com/embed/mmrfm1tVgMU"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </article>
         </section>
         <section id="palmares">
@@ -180,13 +198,18 @@
             <h2 class="section-heading">VERHUUR</h2>
             <article>
                 <h3 class="article-heading">Een professionele en offici&eumlle wedstrijdtafel huren?</h3>
-                <p class="article-text">Dit is mogelijk via het bedrijf Tafelvoetbal Nederland. Huur hier uw professionele tafelvoetbaltafel voor de scherpste tarieven van Nederland.</p>
-                <div class="tnl-external-link"><a href="https://www.tafelvoetbal-nederland.nl/" target="_blank"><i class="fas fa-external-link-alt"></i> Tafelvoetbal Nederland</a></div>
+                <p class="article-text">Dit is mogelijk via het bedrijf Tafelvoetbal Nederland. Huur hier uw
+                    professionele tafelvoetbaltafel voor de scherpste tarieven van Nederland.</p>
+                <div class="tnl-external-link"><a href="https://www.tafelvoetbal-nederland.nl/" target="_blank"><i
+                            class="fas fa-external-link-alt"></i> Tafelvoetbal Nederland</a></div>
                 <div class="tnl-brand-images">
                     <!-- <p>Beschikbare merken:</p> -->
-                    <figure><img src="images/tnl-brands/tornado-logo.png" alt="tornado tafelvoetbaltafel merk logo"></figure>
-                    <figure><img src="images/tnl-brands/ullrichsport-logo.png" alt="ullrichsport tafelvoetbaltafel merk logo"></figure>
-                    <figure><img src="images/tnl-brands/leonhart-logo.png" alt="leonhart tafelvoetbaltafel merk logo"></figure>
+                    <figure><img src="images/tnl-brands/tornado-logo.png" alt="tornado tafelvoetbaltafel merk logo">
+                    </figure>
+                    <figure><img src="images/tnl-brands/ullrichsport-logo.png"
+                            alt="ullrichsport tafelvoetbaltafel merk logo"></figure>
+                    <figure><img src="images/tnl-brands/leonhart-logo.png" alt="leonhart tafelvoetbaltafel merk logo">
+                    </figure>
                 </div>
             </article>
         </section>
@@ -206,9 +229,11 @@
         </section>
         <section id="referenties">
             <h2 class="section-heading">REFERENTIES</h2>
-            <figure class="ref-img"><img src="/images/references/ref-img-1.png" alt="spijkenisse snooker pool darts centrum logo"></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-1.png"
+                    alt="spijkenisse snooker pool darts centrum logo"></figure>
             <figure class="ref-img"><img src="/images/references/ref-img-2.jpg" alt="cafe frappant logo"></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt="tfc kickerheadz rotterdam logo"></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt="tfc kickerheadz rotterdam logo">
+            </figure>
         </section>
         <section id="contact">
             <h2 class="section-heading">CONTACT</h2>
@@ -233,9 +258,17 @@
             </form>
             <hr class="contact-form-seperator">
             <div class="contact-info">
-                <p><i class="fas fa-phone-alt"></i> <a href="tel:+31623560875">+31623560875</a></p>
-                <p><i class="fas fa-envelope"></i><a
-                        href="mailto:info@tafelvoetbalclinics.nl">info@tafelvoetbalclinics.nl</a></p>
+                <address>
+                    <p><i class="fas fa-phone-alt"></i> <a href="tel:+31623560875">+31623560875</a></p>
+                    <p><i class="fas fa-envelope"></i> <a
+                            href="mailto:info@tafelvoetbalclinics.nl">info@tafelvoetbalclinics.nl</a></p>
+                    <p><i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps?ll=51.498563,4.309164&z=16&t=m&hl=en&gl=GB&mapclient=embed&q=Joulehof+21+4622+RG+Bergen+op+Zoom+Netherlands">Joulehof 21, 4622 RG, Bergen op Zoom</a></p>
+                </address>
+            </div>
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1241.908259230408!2d4.309187739470996!3d51.49823444959768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c413355c9753c5%3A0x8d382308ef0eb288!2sJoulehof%2021%2C%204622%20RG%20Bergen%20op%20Zoom%2C%20Netherlands!5e0!3m2!1sen!2suk!4v1581268330113!5m2!1sen!2suk"
+                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
             <div class="socials">
                 <h3 class="socials-head">Volg Ons</h3>
