styled TNL brand images and added availaible brands text above images

--- a/index.html
+++ b/index.html
@@ -202,14 +202,17 @@
                     professionele tafelvoetbaltafel voor de scherpste tarieven van Nederland.</p>
                 <div class="tnl-external-link"><a href="https://www.tafelvoetbal-nederland.nl/" target="_blank"><i
                             class="fas fa-external-link-alt"></i> Tafelvoetbal Nederland</a></div>
-                <div class="tnl-brand-images">
-                    <!-- <p>Beschikbare merken:</p> -->
-                    <figure><img src="images/tnl-brands/tornado-logo.png" alt="tornado tafelvoetbaltafel merk logo">
-                    </figure>
-                    <figure><img src="images/tnl-brands/ullrichsport-logo.png"
-                            alt="ullrichsport tafelvoetbaltafel merk logo"></figure>
-                    <figure><img src="images/tnl-brands/leonhart-logo.png" alt="leonhart tafelvoetbaltafel merk logo">
-                    </figure>
+                <div class="tnl-brands">
+                    <p>Beschikbare merken:</p>
+                    <div class="tnl-brands-images">
+                        <figure><img src="images/tnl-brands/tornado-logo.png" alt="tornado tafelvoetbaltafel merk logo">
+                        </figure>
+                        <figure><img src="images/tnl-brands/ullrichsport-logo.png"
+                                alt="ullrichsport tafelvoetbaltafel merk logo"></figure>
+                        <figure><img src="images/tnl-brands/leonhart-logo.png"
+                                alt="leonhart tafelvoetbaltafel merk logo">
+                        </figure>
+                    </div>
                 </div>
             </article>
         </section>
@@ -262,7 +265,9 @@
                     <p><i class="fas fa-phone-alt"></i> <a href="tel:+31623560875">+31623560875</a></p>
                     <p><i class="fas fa-envelope"></i> <a
                             href="mailto:info@tafelvoetbalclinics.nl">info@tafelvoetbalclinics.nl</a></p>
-                    <p><i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps?ll=51.498563,4.309164&z=16&t=m&hl=en&gl=GB&mapclient=embed&q=Joulehof+21+4622+RG+Bergen+op+Zoom+Netherlands">Joulehof 21, 4622 RG, Bergen op Zoom</a></p>
+                    <p><i class="fas fa-map-marker-alt"></i> <a
+                            href="https://www.google.com/maps?ll=51.498563,4.309164&z=16&t=m&hl=en&gl=GB&mapclient=embed&q=Joulehof+21+4622+RG+Bergen+op+Zoom+Netherlands">Joulehof
+                            21, 4622 RG, Bergen op Zoom</a></p>
                 </address>
             </div>
             <div class="map">
