fixed minor issues

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     </section>
 
     <main>
+
+        <!-- OVER MIJ -->
         <section id="overmij">
             <h2 class="section-heading">Over Mij</h2>
             <article>
@@ -97,6 +99,8 @@
                     allowfullscreen></iframe>
             </article>
         </section>
+
+        <!-- PALMARES -->
         <section id="palmares">
             <h2 class="section-heading">Palmares</h2>
             <article>
@@ -126,7 +130,10 @@
                 </ul>
             </article>
         </section>
+
+        <!-- CLINICS -->
         <section id="clinics">
+
             <h2 class="section-heading">CLINICS</h2>
             <article>
                 <h3 class="article-heading">Wilt u instructies en les krijgen van professionele spelers?</h3>
@@ -194,14 +201,15 @@
                 </div>
             </div>
         </section>
+
+        <!-- VERHUUR -->
         <section id="verhuur">
             <h2 class="section-heading">VERHUUR</h2>
             <article>
                 <h3 class="article-heading">Een professionele en offici&eumlle wedstrijdtafel huren?</h3>
                 <p class="article-text">Dit is mogelijk via het bedrijf Tafelvoetbal Nederland. Huur hier uw
                     professionele tafelvoetbaltafel voor de scherpste tarieven van Nederland.</p>
-                <div class="tnl-external-link"><a href="https://www.tafelvoetbal-nederland.nl/" target="_blank"><i
-                            class="fas fa-external-link-alt"></i> Tafelvoetbal Nederland</a></div>
+                <div class="tnl-external-link"><a href="https://www.tafelvoetbal-nederland.nl/" target="_blank"> <i class="fas fa-external-link-alt"></i> Tafelvoetbal Nederland</a></div>
                 <div class="tnl-brands">
                     <p>Beschikbare merken:</p>
                     <div class="tnl-brands-images">
@@ -216,6 +224,8 @@
                 </div>
             </article>
         </section>
+
+        <!-- EVENEMENTEN -->
         <section id="evenementen">
             <h2 class="section-heading">EVENEMENTEN</h2>
             <article>
@@ -230,6 +240,8 @@
                     alles wat u nodig heeft voor uw event!</p>
             </article>
         </section>
+
+        <!-- REFERENTIES -->
         <section id="referenties">
             <h2 class="section-heading">REFERENTIES</h2>
             <figure class="ref-img"><img src="/images/references/ref-img-1.png"
@@ -238,6 +250,8 @@
             <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt="tfc kickerheadz rotterdam logo">
             </figure>
         </section>
+
+        <!-- CONTACT -->
         <section id="contact">
             <h2 class="section-heading">CONTACT</h2>
             <form>
@@ -282,7 +296,11 @@
             </div>
         </section>
     </main>
+
+    <!-- Footer -->
     <footer>&copy; Copyright 2020 Tafelvoetbalclinics</footer>
+
+    <!-- BACK TO TOP -->
     <div class="back-to-top"><a id="back-to-top" href="#logo"><i class="fas fa-caret-square-up fa-3x"></i></a></div>
 
 
