added functionality to form

--- a/index.html
+++ b/index.html
@@ -254,22 +254,22 @@
         <!-- CONTACT -->
         <section id="contact">
             <h2 class="section-heading">CONTACT</h2>
-            <form>
+            <form action="https://formspree.io/xrgqyaqr" method="POST">
                 <label for="name">Naam<span class="form-required">*</span></label><br>
-                <input type="text" name="name" id="name" required><br>
+                <input type="text" name="naam" id="name" required><br>
 
                 <label for="email">Email<span class="form-required">*</span></label><br>
-                <input type="text" name="email" id="email" required><br>
+                <input type="text" name="e-mail" id="email" required><br>
 
                 <label for="company">Bedrijf</label><br>
-                <input type="text" name="company" id="company"><br>
+                <input type="text" name="bedrijf" id="company"><br>
 
 
                 <label for="phone-number">Telefonenummer</label><br>
-                <input type="number" name="phone-number" id="phone-number"><br>
+                <input type="number" name="phone-nummer" id="phone-number"><br>
 
                 <label for="message">Bericht</label><br>
-                <textarea name="message" id="message" cols="20" rows="10"></textarea><br>
+                <textarea name="bericht" id="message" cols="20" rows="10"></textarea><br>
 
                 <input type="submit" value="VERSTUUR">
             </form>
@@ -298,7 +298,7 @@
     </main>
 
     <!-- Footer -->
-    <footer>&copy; Copyright 2020 Tafelvoetbalclinics</footer>
+    <footer>&copy; Copyright <span id="copyright-year"></span> Tafelvoetbalclinics</footer>
 
     <!-- BACK TO TOP -->
     <div class="back-to-top"><a id="back-to-top" href="#logo"><i class="fas fa-caret-square-up fa-3x"></i></a></div>
