added instagram page link to instagram icon

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <div class="socials">
                 <h3 class="socials-head">Volg Ons</h3>
                 <a href="#facebook"><i class="fab fa-facebook-square fa-4x"></i></a>
-                <a href="#instagram"><i class="fab fa-instagram fa-4x"></i></a>
+                <a href="https://www.instagram.com/tafelvoetbalclinics"><i class="fab fa-instagram fa-4x"></i></a>
             </div>
         </section>
     </main>
