Ready for phone deployment
- added media query to show under construction screen on devices larger
than 600px
- fixed target issues on links

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </label>
     </header>
 
+    <!-- Home -->
     <section id="home">
         <figure>
             <img class="home-banner" src="/images/tafelvoetbalclinics-landing-page-image.jpg"
@@ -209,7 +210,8 @@
                 <h3 class="article-heading">Een professionele en offici&eumlle wedstrijdtafel huren?</h3>
                 <p class="article-text">Dit is mogelijk via het bedrijf Tafelvoetbal Nederland. Huur hier uw
                     professionele tafelvoetbaltafel voor de scherpste tarieven van Nederland.</p>
-                <div class="tnl-external-link"><a href="https://www.tafelvoetbal-nederland.nl/" target="_blank"> <i class="fas fa-external-link-alt"></i> Tafelvoetbal Nederland</a></div>
+                <div class="tnl-external-link"><a href="https://www.tafelvoetbal-nederland.nl/" target="_blank"> <i
+                            class="fas fa-external-link-alt"></i> Tafelvoetbal Nederland</a></div>
                 <div class="tnl-brands">
                     <p>Beschikbare merken:</p>
                     <div class="tnl-brands-images">
@@ -280,7 +282,7 @@
                     <p><i class="fas fa-envelope"></i> <a
                             href="mailto:info@tafelvoetbalclinics.nl">info@tafelvoetbalclinics.nl</a></p>
                     <p><i class="fas fa-map-marker-alt"></i> <a
-                            href="https://www.google.com/maps?ll=51.498563,4.309164&z=16&t=m&hl=en&gl=GB&mapclient=embed&q=Joulehof+21+4622+RG+Bergen+op+Zoom+Netherlands">Joulehof
+                            href="https://www.google.com/maps?ll=51.498563,4.309164&z=16&t=m&hl=en&gl=GB&mapclient=embed&q=Joulehof+21+4622+RG+Bergen+op+Zoom+Netherlands" target="_blank">Joulehof
                             21, 4622 RG, Bergen op Zoom</a></p>
                 </address>
             </div>
@@ -292,10 +294,17 @@
             <div class="socials">
                 <h3 class="socials-head">Volg Ons</h3>
                 <a href="#facebook"><i class="fab fa-facebook-square fa-4x"></i></a>
-                <a href="https://www.instagram.com/tafelvoetbalclinics"><i class="fab fa-instagram fa-4x"></i></a>
+                <a href="https://www.instagram.com/tafelvoetbalclinics" target="_blank"><i class="fab fa-instagram fa-4x"></i></a>
             </div>
         </section>
     </main>
+    <!-- Under Construction Page -->
+    <div class="under-construction">
+        <h1>WEBSITE ONDER CONSTRUCTIE</h1>
+        <p>voor vragen mail ons op <a
+                href="mailto:info@tafelvoetbalclinics.nl?subject=Vraag van een klant">info@tafelvoetbalclinics.nl</a>
+        </p>
+    </div>
 
     <!-- Footer -->
     <footer>&copy; Copyright <span id="copyright-year"></span> Tafelvoetbalclinics</footer>
