--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         <section id="palmares">
             <h2 class="section-heading">Palmares</h2>
             <article>
-                <h3 class="article-heading">Onze Palmares</h3>
+                <h3 class="article-heading">Mijn Palmares</h3>
                 <ul>
                     <h4 class="article-heading">2019</h4>
-                    <li>2019 Top 10 Ranking 1ste Bundesliga (hoogeste afdeling internationale competitie ter wereld)
+                    <li>2019 Top 10 Ranking 1ste Bundesliga (hoogste afdeling internationale competitie ter wereld)
                     </li>
                     <h4 class="article-heading">2018</h4>
                     <li>2018 Promotie naar 1ste Bundesliga</li>
