Added typewriter feature
- in over mij section article header (introduction) added typewriter
feature
- introduction text changes from qaiser syed to his professions and
titles

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section id="overmij">
             <h2 class="section-heading">Over Mij</h2>
             <article>
-                <h3 class="article-heading">Hoi!, Ik ben Qaiser.</h3>
+                <h3 class="article-heading">Hoi!, Ik ben <span class='ik-ben-type' data-wait='3000' data-words='["Qaiser Syed", "een Tavelvoetbal Speler", "een Tafelvoetbal Instructeur", "Nederlands Kampioen", "Landesliga Kampioen"]'></span></h3>
                 <figure><img src="images/Qaiser-overmij.jpeg" alt="Qaiser Nova"></figure>
                 <p class="article-text">Welkom! Jarenlang heb ik met passie het spel, en tegenwoordig sport,
                     tafelvoetbal gespeeld. Ik ben begonnen op een oude Garlando met glasplaat op de Middelbare school.
