Tooltip for beat the pro
- created pop up for beat the pro
- added tooltip icon next to beat the pro text

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="prices">
                         <div class="package-price"><span class="euro-symbol">&euro;</span>85 </div><sub>per uur</sub>
                     </div>
-                    <h3>BASIS</h3>
+                    <h3 class="package-heading">BASIS</h3>
                     <ul class="package-features">
                         <li>Techniektraining</li>
                         <li>Balcontrole</li>
@@ -169,7 +169,7 @@
                     <div class="prices">
                         <div class="package-price"><span class="euro-symbol">&euro;</span>180 </div><sub>per 2 uur</sub>
                     </div>
-                    <h3>UITGEBREID</h3>
+                    <h3 class="package-heading">UITGEBREID</h3 class="package-heading">
                     <ul class="package-features">
                         <li class="package-addition">
                             <div class="package-1-addition">Basis</div>
@@ -185,7 +185,7 @@
                     <div class="prices">
                         <div class="package-price"><span class="euro-symbol">&euro;</span>500 </div><sub>dagdeel</sub>
                     </div>
-                    <h3>TOERNOOI</h3>
+                    <h3 class="package-heading">TOERNOOI</h3 class="package-heading">
                     <ul class="package-features">
                         <li class="package-addition">
                             <div class="package-1-addition">Basis</div>
@@ -193,9 +193,15 @@
                         <li class="package-addition">
                             <div class="package-2-addition">Uitgebreid</div>
                         </li>
-                        <li>Inclusief een <div class="beat-the-pro">Beat The Pro</div>
+                        <li>
+                            <div>Inclusief een <i class="fas fa-question-circle btp-tooltip"></i></div> 
+                            <div class="beat-the-pro">Beat The Pro</div>
+                            <div class="btp-popup">
+                                <i class="fas fa-times-circle fa-2x close-btp-popup"></i>
+                                <h3 class="popup-btp-heading">Beat The Pro</h3>
+                                <p class="popup-btp-text">beat the pro Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi nulla fuga voluptatem ex molestiae excepturi esse rerum incidunt iusto asperiores.</p>
+                            </div>
                         </li>
-                        <!-- <i class="fas fa-question-circle"></i> -->
                     </ul>
                     <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a><br>
                     <div class="package-extra-info"> <i>dagdeel is 4 uur</i> </div>
