Beat the pro tooltip is opening and closing
- open popup when question mark is clicked
- close popup when close button is clicked

--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                             <div class="package-2-addition">Uitgebreid</div>
                         </li>
                         <li>
-                            <div>Inclusief een <i class="fas fa-question-circle btp-tooltip"></i></div> 
+                            <div>Inclusief een <i id="btp-tooltip" class="fas fa-question-circle"></i></div> 
                             <div class="beat-the-pro">Beat The Pro</div>
-                            <div class="btp-popup">
-                                <i class="fas fa-times-circle fa-2x close-btp-popup"></i>
+                            <div id="btp-popup" class="btp-popup">
+                                <i id="close-btp-popup" class="fas fa-times-circle fa-2x close-btp-popup"></i>
                                 <h3 class="popup-btp-heading">Beat The Pro</h3>
                                 <p class="popup-btp-text">beat the pro Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi nulla fuga voluptatem ex molestiae excepturi esse rerum incidunt iusto asperiores.</p>
                             </div>
