Beat the pro pop up completed
- replaced lorem with actual text
- animated open and close

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <div id="btp-popup" class="btp-popup">
                                 <i id="close-btp-popup" class="fas fa-times-circle fa-2x close-btp-popup"></i>
                                 <h3 class="popup-btp-heading">Beat The Pro</h3>
-                                <p class="popup-btp-text">beat the pro Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi nulla fuga voluptatem ex molestiae excepturi esse rerum incidunt iusto asperiores.</p>
+                                <p class="popup-btp-text">Ben je klaar voor de uitdaging? Spelen tegen de kampioen van Nederland en een voormalig wereldkampioen?.</p>
                             </div>
                         </li>
                     </ul>
