Bet the pro tooltip added active class to buttons

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <div class="package-2-addition">Uitgebreid</div>
                         </li>
                         <li>
-                            <div>Inclusief een <i id="btp-tooltip" class="fas fa-question-circle"></i></div> 
+                            <div>Inclusief een <i id="btp-tooltip" class="fas fa-question-circle btp-tooltip"></i></div> 
                             <div class="beat-the-pro">Beat The Pro</div>
                             <div id="btp-popup" class="btp-popup">
                                 <i id="close-btp-popup" class="fas fa-times-circle fa-2x close-btp-popup"></i>
