Added Beat the pro card to clinic packages
- added new card under the title more options
- added the text provided by the product owner

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
             <div class="clinics-packages">
                 <div class="package-card package-1">
                     <div class="prices">
-                        <div class="package-price"><span class="euro-symbol">&euro;</span>85 </div><sub>per uur</sub>
+                        <div class="package-price"><span class="euro-symbol">&euro;</span>85 </div>
+                        <sub>per uur</sub>
                     </div>
                     <h3 class="package-heading">BASIS</h3>
                     <ul class="package-features">
@@ -167,9 +168,10 @@
 
                 <div class="package-card package-2">
                     <div class="prices">
-                        <div class="package-price"><span class="euro-symbol">&euro;</span>180 </div><sub>per 2 uur</sub>
+                        <div class="package-price"><span class="euro-symbol">&euro;</span>180 </div>
+                        <sub>per 2 uur</sub>
                     </div>
-                    <h3 class="package-heading">UITGEBREID</h3 class="package-heading">
+                    <h3 class="package-heading">UITGEBREID</h3>
                     <ul class="package-features">
                         <li class="package-addition">
                             <div class="package-1-addition">Basis</div>
@@ -183,9 +185,10 @@
 
                 <div class="package-card package-3">
                     <div class="prices">
-                        <div class="package-price"><span class="euro-symbol">&euro;</span>500 </div><sub>dagdeel</sub>
+                        <div class="package-price"><span class="euro-symbol">&euro;</span>500 </div>
+                        <sub>dagdeel</sub>
                     </div>
-                    <h3 class="package-heading">TOERNOOI</h3 class="package-heading">
+                    <h3 class="package-heading">TOERNOOI</h3>
                     <ul class="package-features">
                         <li>
                             <div>Inclusief een <i id="btp-tooltip" class="fas fa-question-circle btp-tooltip"></i></div> 
@@ -199,6 +202,19 @@
                     </ul>
                     <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a><br>
                     <div class="package-extra-info"> <i>dagdeel is 4 uur</i> </div>
+                </div>
+                
+                <h3 class="article-heading" style="text-align: center;">Meer Opties</h3>
+                
+                <div class="package-card package-n">
+                    <div class="prices">
+                        <div class="package-price"><span class="euro-symbol">&euro;</span>70</div>
+                        <sub>per uur</sub>
+                    </div>
+                    <h3 class="package-heading">Beat The Pro</h3>
+                    <p>Durf jij de uitdaging aan? Spelen tegen de kampioen van Nederland en een ex-wereldkampioen? Boek mij nu voor een Beat the Pro en geef uw event een super twist. Ook zeer geschikt voor beurzen om daar met een tafelvoetbal aanwezig te zijn met mij erbij om het ijs alvast te breken voor potentiële klanten.</p>
+                    <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a>
+                    <div class="package-extra-info"> <i>Speel tegen Qaiser Syed</i> </div>
                 </div>
             </div>
         </section>
