Added 'coface' reference image

--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
             <figure class="ref-img"><img src="/images/references/ref-img-1.png"
                     alt="spijkenisse snooker pool darts centrum logo"></figure>
             <figure class="ref-img"><img src="/images/references/ref-img-2.jpg" alt="cafe frappant logo"></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt="tfc kickerheadz rotterdam logo">
-            </figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt="tfc kickerheadz rotterdam logo"></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-4.png" alt="coface logo"></figure>
         </section>
 
         <!-- CONTACT -->
