linked more information to cookie policy page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Cookies Banner -->
     <div class="cookies-banner">
         <div class="cookies-banner-text">Deze website maakt gebruik van cookies.</div>
-        <div class="cookies-info-link">Meer Informatie</div>
+        <div class="cookies-info-link"><a href="https://www.termsfeed.com/cookies-policy/b4102a3ea71484d6b028f03d40d8fa17" class="cookies-policy" target="_blank">Meer Informatie</a></div>
         <button class="cookies-accept-button">Akkoord!</button>
     </div>
     
