added link to cookies policy in footer

--- a/index.html
+++ b/index.html
@@ -335,7 +335,14 @@
     </div>
 
     <!-- Footer -->
-    <footer>&copy; Copyright <span id="copyright-year"></span> Tafelvoetbalclinics</footer>
+    <footer>
+        <div class="copyright-text">
+            &copy; Copyright <span id="copyright-year"></span> Tafelvoetbalclinics
+        </div>
+        <div class="other-links">
+            <a href="https://www.termsfeed.com/cookies-policy/b4102a3ea71484d6b028f03d40d8fa17" target="_blank">Cookies Beled</a>
+        </div>
+    </footer>
 
     <!-- Cookies Banner -->
     <div id="cookies-banner" class="cookies-banner">
