Redid html and css for basic package card

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 
 <body>
     <!-- Header and Nav-menu -->
-    
     <header>
-
         <h1 class="logo" id="logo">Tafelvoetbalclinics</h1>
         <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
@@ -155,6 +153,7 @@
             </article>
 
             <div class="clinics-packages">
+                <!-- Basis PAckage -->
                 <div class="package-card package-1">
                     <div class="prices">
                         <div class="package-price"><span class="euro-symbol">&euro;</span>85 </div>
@@ -171,6 +170,7 @@
                     <div class="package-extra-info"><i>+ &euro;65 voor extra uur</i></div>
                 </div>
 
+                <!-- Uitgebried PAckage -->
                 <div class="package-card package-2">
                     <div class="prices">
                         <div class="package-price"><span class="euro-symbol">&euro;</span>180 </div>
@@ -188,6 +188,7 @@
                     <div class="package-extra-info"> <i>Minimaal 2 uur</i> </div>
                 </div>
 
+                <!-- Toernooi Package -->
                 <div class="package-card package-3">
                     <div class="prices">
                         <div class="package-price"><span class="euro-symbol">&euro;</span>500 </div>
@@ -212,6 +213,7 @@
 
                 <h3 class="article-heading" style="text-align: center;">Meer Opties</h3>
 
+                <!-- Beat the pro package -->
                 <div class="package-card package-n">
                     <div class="prices">
                         <div class="package-price"><span class="euro-symbol">&euro;</span>70</div>
@@ -352,7 +354,9 @@
     </div>
 
     <!-- BACK TO TOP -->
-    <div class="back-to-top"><a id="back-to-top" href="#logo"><i class="fas fa-caret-square-up fa-3x"></i></a></div>
+    <div class="back-to-top">
+        <a id="back-to-top" href="#logo"><i class="fas fa-caret-square-up fa-3x"></i></a>
+    </div>
 
     <!-- Scripts -->
 
