redisgned inclusief feature aka package 1 addition

--- a/index.html
+++ b/index.html
@@ -177,10 +177,8 @@
                         <sub>per 2 uur</sub>
                     </div>
                     <h3 class="package-heading">UITGEBREID</h3>
+                    <div class="package-1-addition"><span class="package-1-addition-extra">Inclusief</span><span class="package-1-addition-basis">Basis</span></div>
                     <ul class="package-features">
-                        <li class="package-addition">
-                            <div class="package-1-addition">Basis</div>
-                        </li>
                         <li>Strategie</li>
                         <li>Verdediging</li>
                     </ul>
