redid html and css for beat the pro feature in package 3

--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
                         <sub>per 2 uur</sub>
                     </div>
                     <h3 class="package-heading">UITGEBREID</h3>
-                    <div class="package-1-addition"><span class="package-1-addition-extra">Inclusief</span><span class="package-1-addition-basis">Basis</span></div>
+                    <div class="package-1-addition"><span class="package-1-addition-extra">Inclusief</span><span
+                            class="package-1-addition-basis">Basis</span></div>
                     <ul class="package-features">
                         <li>Strategie</li>
                         <li>Verdediging</li>
@@ -193,18 +194,21 @@
                         <sub>dagdeel</sub>
                     </div>
                     <h3 class="package-heading">TOERNOOI</h3>
-                    <ul class="package-features">
-                        <li>
-                            <div>Inclusief een <i id="btp-tooltip" class="fas fa-question-circle btp-tooltip"></i></div>
+                    <div class="package-3-feature">
+                        <div>Inclusief een</div>
+                        <div class="beat-the-pro-feature-text">
                             <div class="beat-the-pro">Beat The Pro</div>
-                            <div id="btp-popup" class="btp-popup">
-                                <i id="close-btp-popup" class="fas fa-times-circle fa-2x close-btp-popup"></i>
-                                <h3 class="popup-btp-heading">Beat The Pro</h3>
-                                <p class="popup-btp-text">Ben je klaar voor de uitdaging? Spelen tegen de kampioen van
-                                    Nederland en een voormalig wereldkampioen?.</p>
+                            <div class="btp-tt-container">
+                                <i id="btp-tooltip" class="fas fa-question-circle btp-tooltip"></i> 
                             </div>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
+                    <div id="btp-popup" class="btp-popup">
+                        <i id="close-btp-popup" class="fas fa-times-circle fa-2x close-btp-popup"></i>
+                        <h3 class="popup-btp-heading">Beat The Pro</h3>
+                        <p class="popup-btp-text">Ben je klaar voor de uitdaging? Spelen tegen de kampioen van
+                            Nederland en een voormalig wereldkampioen?.</p>
+                    </div>
                     <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a><br>
                     <div class="package-extra-info"> <i>dagdeel is 4 uur</i> </div>
                 </div>
@@ -340,14 +344,17 @@
             &copy; Copyright <span id="copyright-year"></span> Tafelvoetbalclinics
         </div>
         <div class="other-links">
-            <a href="https://www.termsfeed.com/cookies-policy/b4102a3ea71484d6b028f03d40d8fa17" target="_blank">Cookies Beled</a>
+            <a href="https://www.termsfeed.com/cookies-policy/b4102a3ea71484d6b028f03d40d8fa17" target="_blank">Cookies
+                Beled</a>
         </div>
     </footer>
 
     <!-- Cookies Banner -->
     <div id="cookies-banner" class="cookies-banner">
         <div class="cookies-banner-text">Deze website maakt gebruik van cookies.</div>
-        <div class="cookies-info-link"><a href="https://www.termsfeed.com/cookies-policy/b4102a3ea71484d6b028f03d40d8fa17" class="cookies-policy" target="_blank">Meer Informatie</a></div>
+        <div class="cookies-info-link"><a
+                href="https://www.termsfeed.com/cookies-policy/b4102a3ea71484d6b028f03d40d8fa17" class="cookies-policy"
+                target="_blank">Meer Informatie</a></div>
         <button id="cookies-accept-button" class="cookies-accept-button">Akkoord!</button>
     </div>
 
