--- a/index.html
+++ b/index.html
@@ -218,15 +218,17 @@
                 <!-- Beat the pro package -->
                 <div class="package-card package-n">
                     <div class="prices">
-                        <div class="package-price"><span class="euro-symbol">&euro;</span>70</div>
+                        <div class="package-price"><span class="euro-symbol">&euro;</span>70 </div>
                         <sub>per uur</sub>
                     </div>
                     <h3 class="package-heading">Beat The Pro</h3>
-                    <p>Durf jij de uitdaging aan? Spelen tegen de kampioen van Nederland en een ex-wereldkampioen? Boek
-                        mij nu voor een Beat the Pro en geef uw event een super twist. Ook zeer geschikt voor beurzen om
-                        daar met een tafelvoetbal aanwezig te zijn met mij erbij om het ijs alvast te breken voor
-                        potentiële klanten.</p>
-                    <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a>
+                    <div class="package-n1-feature">
+                        <p>Durf jij de uitdaging aan? Spelen tegen de kampioen van Nederland en een ex-wereldkampioen? Boek
+                            mij nu voor een Beat the Pro en geef uw event een super twist. Ook zeer geschikt voor beurzen om
+                            daar met een tafelvoetbal aanwezig te zijn met mij erbij om het ijs alvast te breken voor
+                            potentiële klanten.</p>
+                    </div>
+                    <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a><br>
                     <div class="package-extra-info"> <i>Speel tegen Qaiser Syed</i> </div>
                 </div>
             </div>
