--- a/index.html
+++ b/index.html
@@ -326,9 +326,11 @@
             </div>
             <div class="socials">
                 <h3 class="socials-head">Volg Ons</h3>
-                <a href="#facebook"><i class="fab fa-facebook-square fa-4x"></i></a>
-                <a href="https://www.instagram.com/tafelvoetbalclinics" target="_blank"><i
-                        class="fab fa-instagram fa-4x"></i></a>
+                <div class="social-links">
+                    <a href="#facebook"><i class="fab fa-facebook-square fa-4x"></i></a>
+                    <a href="https://www.instagram.com/tafelvoetbalclinics" target="_blank"><i
+                            class="fab fa-instagram fa-4x"></i></a>
+                </div>
             </div>
         </section>
     </main>
