--- a/index.html
+++ b/index.html
@@ -203,11 +203,13 @@
                             </div>
                         </div>
                     </div>
-                    <div id="btp-popup" class="btp-popup">
-                        <i id="close-btp-popup" class="fas fa-times-circle fa-2x close-btp-popup"></i>
-                        <h3 class="popup-btp-heading">Beat The Pro</h3>
-                        <p class="popup-btp-text">Ben je klaar voor de uitdaging? Spelen tegen de kampioen van
-                            Nederland en een voormalig wereldkampioen?.</p>
+                    <div id="btp-popup-container" class="btp-popup-container">
+                        <div class="btp-popup">
+                            <i id="close-btp-popup" class="fas fa-times-circle fa-2x close-btp-popup"></i>
+                            <h3 class="popup-btp-heading">Beat The Pro</h3>
+                            <p class="popup-btp-text">Ben je klaar voor de uitdaging? Spelen tegen de kampioen van
+                                Nederland en een voormalig wereldkampioen?.</p>
+                        </div>
                     </div>
                     <a class="buy-package-button" href="#contact">AFSPRAAK MAKEN</a><br>
                     <div class="package-extra-info"> <i>dagdeel is 4 uur</i> </div>
